[project]
name = "cache-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "boto3 >= 1.36.19",
    "boto3-stubs[essential] >= 1.36.19",
    "fastapi >= 0.115.8",
    "mangum >= 0.19.0",
    "pendulum >= 3.0.0",
    "pydantic >= 2.10.6",
    "pydantic-settings >= 2.7.1",
    "ujson>=5.10.0",
    "uvicorn >= 0.34.0",
]

[dependency-groups]
dev = [
    "autoflake >= 2.3.1",
    "aws-lambda-powertools[validation] >= 3.10.0",
    "bandit >= 1.8.3",
    "black >= 25.1.0",
    "isort >= 5.13.2",
    "moto >= 5.0.28",
    "mypy >= 1.15.0",
    "pycodestyle >= 2.12.1",
    "pytest >= 8.3.3",
    "pytest-cov >= 5.0.0",
    "pytest-env >= 1.1.5",
    "pytest-mock >= 3.14.0",
    "pytest-xdist >= 3.6.1",
    "respx >= 0.22.0",
]
